copy edit (tertile)

--- a/localtemp/index.html
+++ b/localtemp/index.html
@@ -565,7 +565,7 @@
                                             <thead>
                                                 <tr>
                                                     <th scope="col">Measure:</th>
-                                                    <th scope="col">Tertile</th>
+                                                    <th scope="col"></th>
 
                                                 </tr>
                                             </thead>
@@ -619,7 +619,7 @@
                                             <thead>
                                                 <tr>
                                                     <th scope="col">Measure:</th>
-                                                    <th scope="col">Tertile</th>
+                                                    <th scope="col"></th>
 
                                                 </tr>
                                             </thead>
