--- a/localtemp/index.html
+++ b/localtemp/index.html
@@ -555,7 +555,7 @@
                                             <thead>
                                                 <tr>
                                                     <th scope="col">Measure:</th>
-                                                    <th scope="col">Tertile</th>
+                                                    <th scope="col"></th>
 
                                                 </tr>
                                             </thead>
@@ -609,7 +609,7 @@
                                             <thead>
                                                 <tr>
                                                     <th scope="col">Measure:</th>
-                                                    <th scope="col">Tertile</th>
+                                                    <th scope="col"></th>
 
                                                 </tr>
                                             </thead>
