Adding open data link

--- a/localtemp/index.html
+++ b/localtemp/index.html
@@ -957,7 +957,9 @@
                                 </p>
                                 <p>You can explore the areas where we measured temperatures, and their average
                                     summer
-                                    temperature, using the map below.</p>
+                                    temperature, using the map below.<ul>
+                                        <li><a href="https://data.cityofnewyork.us/browse?q=Temperature+">Download data at Open Data</a></li>
+                                    </ul></p>
                                 
                                     </div>
 
