Add charts to poweroutages

--- a/poweroutages/index.html
+++ b/poweroutages/index.html
@@ -224,7 +224,8 @@
                                 <h2 class="fs-lg">This scenario - or something like it - is a reality for many New Yorkers.</h2>
                                 <p>Asthma and many other medical conditions are treated at-home with electrical medical equipment. <a href="https://a816-dohbesp.nyc.gov/IndicatorPublic/VisualizationData.aspx?id=2377,719b87,107,Summarize">Citywide, 7.6% of households include someone who uses electric medical equipment, with some neighborhoods at nearly 17%</a>. </p>
 
-                                [INSERT CHART HERE]
+                                <iframe title="Electric med equipment and poverty" aria-label="Table" id="datawrapper-chart-2NGjU" src="https://datawrapper.dwcdn.net/2NGjU/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="576"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+                                </script>
                                 
                                 <p>As the chart above shows, neighborhoods with more households that rely on electrical medical equipment also have higher rates of poverty.</p>
 
@@ -239,14 +240,24 @@
 
                                 <p>That blackout was dangerous for NYC residents, and we can see the effects in health data. Hospitalizations for respiratory problems spiked above predicted levels.
                                 </p>
+                                </div>
+                                <div class="wide my-4">
 
-                                [INSERT HOSP CHART]
+                                <iframe title="The 2003 Blackout caused a spike in respiratory hospitalizations..." aria-label="Interactive line chart" id="datawrapper-chart-6ivif" src="https://datawrapper.dwcdn.net/6ivif/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+                                </script>
+                                </div>
+                                <div class="narrow">
 
                                 <P>The health impacts were not limited to just hospitalizations. In fact, the power outage was deadly. </P>
 
                                 <P>In the chart below, you can clearly see that <span style="font-weight: bold; color: red">observed deaths</span> generally bounce around the level of <span style="font-weight: bold; color: rgb(83, 83, 83)">predicted deaths</span>, staying within the <span style="background-color:lightgray; padding-left: 4px; padding-right: 4px;"> prediction range</span>. But on and after the power outage, observed deaths spiked: more people died during and immediately after the power outage.</P>
+                            </div>
+                            <div class="wide my-4">
 
-                                [INSERT DEATH CHART]
+                                <iframe title="...and a spike in deaths in NYC." aria-label="Interactive line chart" id="datawrapper-chart-Y2D7s" src="https://datawrapper.dwcdn.net/Y2D7s/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+                                </script>
+                            </div>
+                            <div class="narrow">
 
                                 <p>The deaths could have been caused by many dangers of power outages: people not being able to charge medical equipment, not being able to use air conditioning on hot days, or experiencing increased physical and mental stress and isolation of living without elevators or subways.</p>
 
@@ -257,14 +268,19 @@
 
                                 <p>The chart below from <a href="https://www.climatecentral.org">www.climatecentral.org</a> shows the increasing frequency of weather-related power outages over the last 20 years.  While there are year-to-year differences, the overall increasing trend is clear.</p>
 
-                                [INSERT CHART]
+                            </div>
+                            <div class="wide my-4">
 
+                                <iframe title="Increasing weather-related power outages in the Northeast U.S." aria-label="Column Chart" id="datawrapper-chart-sbTUE" src="https://datawrapper.dwcdn.net/sbTUE/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="407"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+                                </script>
+                            </div>
+                            <div class="narrow">
 
                                 <h2 class="fs-lg">...but not all NYC residents are prepared.</h2>
 
                                 <P><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6181821/">Our survey found that 58% of NYC residents have basic preparation for power outages</a>: a working flashlight and a 3-day supply of water and food.</P>
 
-                                <P>People with household members who depend on electrical medical equipment are more likely to be prepared for power outages (70 vs. 56% of respondents without electric-dependent household members). However, even though they are more prepared, they report not <em>feeling</em> more prepared as they face the challenge of ensuring that their medical equipment runs during power outages: when you need electricity to stay healthy, it’s hard to feel completely prepared for a blackout.</P>
+                                <P>People with household members who depend on electrical medical equipment are more likely to be prepared for power outages (70% vs. 56% of respondents without electric-dependent household members). However, even though they are more prepared, they report not <em>feeling</em> more prepared as they face the challenge of ensuring that their medical equipment runs during power outages: when you need electricity to stay healthy, it’s hard to feel completely prepared for a blackout.</P>
 
                                 <h2 class="fs-lg">Stay prepared.</h2>
                                 <p>It’s important for our City to build a power grid that is resilient, since we expect more extreme weather as our climate continues to change. As we experience this changing climate, a reliable supply of electricity is crucial to support life-saving equipment. And it’s vital that this resiliency be equitable, so that people in high-poverty neighborhoods that have been deprived of resources aren’t made additionally vulnerable by climate change and power outages.  </p>
