--- a/poweroutages/index.html
+++ b/poweroutages/index.html
@@ -31,14 +31,14 @@
     <link rel="stylesheet" href="https://nycehs.github.io/Portal-Core-Repo/css/datastories.css">
 
     <!--Google Analytics script - use only on Production-->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-28636785-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-28636785-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-28636785-1');
-    </script> -->
+    </script> 
 
 </head>
 
