update heat link

--- a/heat/index.html
+++ b/heat/index.html
@@ -238,7 +238,7 @@
 
                                 </p>
 
-                                <p>We use statistical models to examine the difference between the average number of deaths during hot weather and the average number of deaths on typical, cooler summer days. That difference is called <a href="https://nyccas.cityofnewyork.us/nyccas2021/web/report/7">heat-exacerbated mortality</a>. It is an estimate of the number of people who died because of heat, even if heat is not included on their death certificate as a cause of death.</p>
+                                <p>We use statistical models to examine the difference between the average number of deaths during hot weather and the average number of deaths on typical, cooler summer days. That difference is called <a href="https://nyccas.cityofnewyork.us/heat">heat-exacerbated mortality</a>. It is an estimate of the number of people who died because of heat, even if heat is not included on their death certificate as a cause of death.</p>
 
                                 <h3>Heat-exacerbated mortality</h3>
                                 <p>Each year from 2010 to 2018, there were an average of 350 heat-exacerbated deaths associated with days over 82°F from May to September. This is over 30 times greater than the number of deaths with “heat-related stress” listed on the death certificate. </p>
