--- a/aq2/index.html
+++ b/aq2/index.html
@@ -240,10 +240,10 @@
                                     levels of PM2.5 pollution. Only with high traffic density do we see higher pollution
                                     levels. You can also see that PM2.5 is a little higher in the winter and summer for
                                     all neighborhoods (regardless of traffic density). Pollution levels vary by season
-                                    due changes in energy use (heating and cooling), and weather patterns.</p>
+                                    due to changes in energy use (heating and cooling), and weather patterns.</p>
                                 <h2>Air quality has been improving</h2>
                                 <p>NYC's air quality has been improving. Over the last ten years, NYCCAS has shown an
-                                    improvement each of the pollutants we monitor.</p>
+                                    improvement in each of the pollutants we monitor.</p>
                                 <p>Because the level of PM2.5 varies by season, it can be helpful to look at one season
                                     at a time. The chart below shows the average summertime levels of PM2.5. You can see
                                     that air quality has gotten better across all neighborhoods, regardless of traffic
