small tweak to geos copy

--- a/geographies/index.html
+++ b/geographies/index.html
@@ -13,7 +13,7 @@
     <!-- Corrects IE Compatibility Mode -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>About the geographies on the Portal</title>
+    <title>About the geographies in Health Department data</title>
 
     <!--
     CSS is all hosted by the Core-Repo. Links will need to be updated for each project once merged or deployed.
@@ -181,7 +181,7 @@
 
             <div class="container-fluid my-auto">
                 <div class="medium my-3 text-left">
-                    <h1 class="display-4 titleheader">All About Geography:<br>The neighborhood boundaries on the EH Data Portal</h1>
+                    <h1 class="display-4 titleheader">All About Geography:<br>The neighborhood boundaries in Health Department data</h1>
                 </div>
             </div>
             <!-- .container -->
@@ -216,11 +216,11 @@
 
                         <div class="narrow my-2">
                             <h2>Mapping health data onto NYC's neighborhoods</h2>
-                            <p>New York City has hundreds of neighborhoods and nearly as many ways of drawing neighborhood boundaries. When you <a href="/IndicatorPublic/Subtopic.aspx">visit the Environment & Health Data Portal</a>, you might notice that data is available in several different neighborhood schemes. </p>
+                            <p>New York City has hundreds of neighborhoods and nearly as many ways of drawing neighborhood boundaries. When you <a href="/IndicatorPublic/Subtopic.aspx">visit the Environment & Health Data Portal</a> or other Health Department data resources, you might notice that data is available in several different neighborhood schemes. </p>
 
                             <p>For example, dig around in the asthma data pages and you'll find <a href="/IndicatorPublic/VisualizationData.aspx?id=18,4466a0,11,Summarize">Adults with Asthma</a> presented by UHF34 neighborhoods, <a href="/IndicatorPublic/VisualizationData.aspx?id=2147,4466a0,11,Summarize">Public School Children with Asthma</a> presented by UHF42 neighborhoods, and <a href="/IndicatorPublic/VisualizationData.aspx?id=2383,4466a0,11,Summarize">Asthma emergency department visits</a> are offered by NTAs. Other data on the portal are offered by CD, ZIP code, PUMA, and occasionally even police precinct. <strong>What are all these neighborhood schemes, why do we use one and not the other, and why isn’t the whole system consistent? </strong></p>
 
-                            <p>The most common neighborhood boundaries on the EH Data Portal are Community Districts, Public Use Microdata Areas, and United Hospital Fund neighborhoods. These three common neighborhood schemes have different building blocks. Let's explore these.</P>
+                            <p>The most common neighborhood boundaries in Health Department data are Community Districts, Public Use Microdata Areas, and United Hospital Fund neighborhoods. These three common neighborhood schemes have different building blocks. Let's explore these.</P>
                                </div>
    
                                <!--start wide-->
