--- a/covidair2/index.html
+++ b/covidair2/index.html
@@ -217,10 +217,10 @@
                             <div class="narrow my-2">
                                 <h2 class="fs-xl">Big improvements in outdoor air quality during COVID-19 reveal impacts of traffic and commercial cooking</h2>
                                 <p>On March 20, 2020, New York State announced the COVID-19 shutdown, officially known as NY Pause. In NYC, it lasted until June 8, 2020.</p>
-                                <p>With stay-at-home orders in NY and other states, New York City's air quality changed significantly. Earlier, <a href="https://a816-dohbesp.nyc.gov/IndicatorPublic/Closerlook/covidair/">we looked at data collected from real-time air pollution monitors to see how daty-to-day pollution changed when people started to stay home</a>.</p>
+                                <p>With stay-at-home orders in NY and other states, New York City's air quality changed significantly. Earlier, <a href="https://a816-dohbesp.nyc.gov/IndicatorPublic/Closerlook/covidair/">we looked at data collected from real-time air pollution monitors to see how day-to-day pollution changed when people started to stay home</a>.</p>
                                 <p>More recently, we used data from our network of air quality monitors to examine air pollution changes over time and across neighborhoods.</p>
                                 <p>During NY Pause, there was <a href="https://new.mta.info/coronavirus/ridership">less traffic at bridges and tunnels</a>, <a href="https://dev.socrata.com/foundry/data.cityofnewyork.us/i4gi-tjb9">shorter travel times on major roadways</a>, and <a href="https://github.com/OpportunityInsights/EconomicTracker">fewer open small businesses</a>, especially in leisure and hospitality.  </p>
-                                <p>As a result, outdoor air quality improved: we recorded large decreases in concentrations of pollutants. Some of this decrease was expected since air quality is seasonal. Boilers that heat buildings in the winter emit pollutants, so we usually see air quality improve when winter ends. </p>
+                                <p>As a result, outdoor air quality improved: we recorded large decreases in concentrations of pollutants. Some of this decrease was expected since air quality is seasonal. For example, boilers that heat buildings in the winter emit pollutants, so we usually see air quality improve when winter ends. </p>
                                 <p>But the improvements in pollution from winter to spring were much greater in 2020 than they had been in 2019. Reductions in activity during NY Pause resulted in a <strong>29% decline in NO2</strong> and a <strong>25% decline in PM2.5</strong>. </p>
                             </div>
                             <div class="medium my-4 py-2">
@@ -229,7 +229,7 @@
                                     <div class="col-6">
                                         <iframe title="NO2 fell during NY Pause in 2020..." aria-label="Interactive line chart" id="datawrapper-chart-9jeJb" src="https://datawrapper.dwcdn.net/9jeJb/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="398"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
                                         </script>
-                                        <div style="background-color:blanchedalmond; padding: 10px; border-radius: 5px"><p class="fs-sm">Nitrogen dioxide (NO2) part of a group of pollutants called “oxides of nitrogen” (NOX). Exposures to NOX are linked to increased emergency department visits and hospitalizations for respiratory conditions, particularly asthma.  </p></div>
+                                        <div style="background-color:blanchedalmond; padding: 10px; border-radius: 5px"><p class="fs-sm">Nitrogen dioxide (NO2) is part of a group of pollutants called “oxides of nitrogen” (NOX). Exposures to NOX are linked to increased emergency department visits and hospitalizations for respiratory conditions, particularly asthma.  </p></div>
                                     </div>
                                     <div class="col-6">
                                         <iframe title="So did PM2.5 - more than in 2019." aria-label="Interactive line chart" id="datawrapper-chart-WHK8J" src="https://datawrapper.dwcdn.net/WHK8J/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="398"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
@@ -304,7 +304,7 @@
                             </div>
 
                             <div class="narrow my-2"> 
-                                 <P>The other major source of air pollution in NYC, building boilers, showed little evidence of change during the shutdown.</P>
+                                 <P>The other major source of air pollution in NYC, <a href="https://www.sciencedirect.com/science/article/pii/S2666765722000072?via%3Dihub">building boilers, showed little evidence of change during the shutdown</a>.</P>
 
                                  <h3 class="fs-lg">While traffic picked up again, businesses were slow to reopen and Midtown PM2.5 levels stayed low. </h3>
                                  <p>Even after traffic picked up again, PM2.5 levels in Midtown remained similar to the site in Queens. This suggests that the changes in PM2.5 weren't driven entirely by traffic levels in the CBD.  </p>
